<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <RelativeLayout
        android:id="@+id/controlsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/relLayout_Track" >

        <edu.onTrack.controlsystem.VerticalSeekBar
            android:id="@+id/vertSeekBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:max="64" />

        <Button
            android:id="@+id/btnAddTrain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:visibility="invisible"
            android:text="@string/add"/>

        <TextView
            android:id="@+id/txtvwTrainTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnAddTrain"
            android:layout_alignBottom="@+id/btnAddTrain"
            android:layout_toRightOf="@+id/btnAddTrain"
            android:text="@string/trainTitle" />

        <Spinner
            android:id="@+id/spnTrainSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnAddTrain" />

        <Button
            android:id="@+id/btnAddSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/spnTrainSelect"
            android:text="@string/add"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txtvwSwitchSelect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/btnAddSwitch"
            android:layout_alignBottom="@+id/btnAddSwitch"
            android:layout_toRightOf="@+id/btnAddSwitch"
            android:text="@string/selSwitch" />

        <Spinner
            android:id="@+id/spnSwitchSel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/btnAddSwitch" />

        <ToggleButton
            android:id="@+id/tglbtnSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/txtvwSwitchSelect"
            android:layout_below="@+id/spnSwitchSel"
            android:textOff="@string/divert"
            android:textOn="@string/straight" />

        <TextView
            android:id="@+id/txtvwStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/title_section2" />

        <Button
            android:id="@+id/btnConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/txtvwStatus"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="21dp"
            android:text="@string/connect" />

        <Button
            android:id="@+id/btnSound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/btnConnect"
            android:layout_alignLeft="@+id/btnConnect"
            android:layout_alignRight="@+id/btnConnect"
            android:layout_marginBottom="25dp"
            android:visibility="gone"
            android:text="@string/sound" />

        <EditText
            android:id="@+id/edtxtTieCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/btnSound"
            android:layout_below="@+id/tglbtnSwitch"
            android:layout_marginTop="52dp"
            android:ems="10"
            android:visibility="gone"
            android:inputType="numberSigned" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/edtxtAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/edtxtTieCount"
            android:layout_below="@+id/edtxtTieCount"
            android:visibility="gone"
            android:layout_marginTop="34dp"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/txtViewTieCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/edtxtTieCount"
            android:layout_alignBottom="@+id/edtxtTieCount"
            android:visibility="gone"
            android:layout_toLeftOf="@+id/edtxtTieCount"
            android:text="TieCount" />

        <TextView
            android:id="@+id/txtViewAngle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtxtAngle"
            android:layout_alignLeft="@+id/txtViewTieCount"
            
            android:visibility="gone"
            android:text="Angle" />

        <Button
            android:id="@+id/btnBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnSound"
            android:layout_marginLeft="30dp"
            android:layout_toRightOf="@+id/btnSound"
            android:visibility="gone"
            android:text="Rezero" />

        <EditText
            android:id="@+id/edtxtBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tglbtnSwitch"
            android:layout_toLeftOf="@+id/btnBarcode"
            android:visibility="gone"
            android:ems="10"
            android:inputType="numberSigned" />

        <TextView
            android:id="@+id/txtvwBarCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/edtxtBarCode"
            android:layout_alignRight="@+id/txtViewTieCount"
            android:visibility="gone"
            android:text="Barcode" />
    </RelativeLayout>

    <!--
		Each tablet has a different resolution and pixel density
		Currently we hard code these based on which device we are
		working with, here are three known values that work well.
		HP Slate 21 has width of 1700dp and height of 875dp 
	    Samsung 10.1 has width of 1050dp and height of 600dp 
	    Nexus 7 has width of 650dp and height of 400dp
    -->

    <RelativeLayout
        android:id="@+id/relLayout_Track"
        android:layout_width="1700dp"
        android:layout_height="875dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:clipChildren="false"
        android:tag="relLayout_Track" >

        <ImageView
            android:id="@+id/relLayout_ImageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_below="@+id/title"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relLayout_Tray"
        android:layout_width="1700dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/relLayout_Track"
        android:layout_below="@id/relLayout_Track"
        android:tag="tray" >

        <ImageView
            android:id="@+id/imgViewTrains"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:src="@drawable/train1" />

        <ImageView
            android:id="@+id/imgViewSwitches"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/imgViewTrains"
            android:src="@drawable/football" />

        <ImageView
            android:id="@+id/imgViewBarcodes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/imgViewSwitches"
            android:src="@android:drawable/btn_star" />

        <Button
            android:id="@+id/btnLocoPacket1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/imgViewBarcodes"
            android:visibility="gone"
            android:text="Packet 1" />

        <Button
            android:id="@+id/btnLocoPacket2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnLocoPacket1"
            android:visibility="gone"
            android:text="Packet 2" />

        <Button
            android:id="@+id/btnLocoPacket3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnLocoPacket2"
            android:visibility="gone"
            android:text="Packet 3" />

        <Button
            android:id="@+id/btnLocoTrackOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnLocoPacket3"
            android:visibility="gone"
            android:text="Track On" />

        <Button
            android:id="@+id/btnLocoTrackOff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/btnLocoTrackOn"
            android:visibility="gone"
            android:text="Track Off" />

        <Button
            android:id="@+id/addLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="10dp"
            android:text="Add Layout" />
    </RelativeLayout>

</RelativeLayout>